--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
+    "@types/request-promise": "^4.1.44",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
